--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/world
+spring.datasource.username=root
+spring.datasource.password=angkon16ovgu
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
