--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/world
 spring.datasource.username=root
-spring.datasource.password=angkon16ovgu
+spring.datasource.password=somePassword
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
